Porject 3: collision between ball and players

--- a/Project3/Makefile
+++ b/Project3/Makefile
@@ -7,13 +7,13 @@ BUILD_DIR=build
 
 all: soccerStars.out
 
-soccerStars.out: ${BUILD_DIR}/main.o ${BUILD_DIR}/rsdl.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/Team.o ${BUILD_DIR}/Stadium.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Ball.o
-	${CC} ${BUILD_DIR}/main.o ${BUILD_DIR}/rsdl.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/Team.o ${BUILD_DIR}/Stadium.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Ball.o ${SDL_FLAGS} -o ${BUILD_DIR}/soccerStars.out
+soccerStars.out: ${BUILD_DIR}/main.o ${BUILD_DIR}/functions.o  ${BUILD_DIR}/rsdl.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/Team.o ${BUILD_DIR}/Stadium.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Ball.o ${BUILD_DIR}/Object.o
+	${CC} ${BUILD_DIR}/main.o ${BUILD_DIR}/functions.o ${BUILD_DIR}/rsdl.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/Team.o ${BUILD_DIR}/Stadium.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Ball.o ${BUILD_DIR}/Object.o ${SDL_FLAGS} -o ${BUILD_DIR}/soccerStars.out
 
 ${BUILD_DIR}/main.o: main.cpp Game.hpp
 	${CC} -c main.cpp ${SDL_FLAGS} -o ${BUILD_DIR}/main.o
 
-${BUILD_DIR}/Game.o: Game.cpp Stadium.hpp Player.hpp Ball.hpp Team.hpp rsdl.hpp
+${BUILD_DIR}/Game.o: Game.cpp functions.o Stadium.hpp Player.hpp Ball.hpp Team.hpp rsdl.hpp
 	${CC} -c Game.cpp ${SDL_FLAGS} -o ${BUILD_DIR}/Game.o
 
 ${BUILD_DIR}/Team.o: Team.cpp
@@ -22,7 +22,10 @@ ${BUILD_DIR}/Team.o: Team.cpp
 ${BUILD_DIR}/Stadium.o: Stadium.cpp Player.hpp Ball.hpp
 	${CC} -c Stadium.cpp ${SDL_FLAGS} -o ${BUILD_DIR}/Stadium.o
 
-${BUILD_DIR}/Player.o: Player.cpp
+${BUILD_DIR}/Object.o: Object.cpp 
+	${CC} -c Object.cpp ${SDL_FLAGS} -o ${BUILD_DIR}/Object.o
+	
+${BUILD_DIR}/Player.o: Player.cpp Object.hpp
 	${CC} -c Player.cpp ${SDL_FLAGS} -o ${BUILD_DIR}/Player.o
 
 ${BUILD_DIR}/Ball.o: Ball.cpp
@@ -30,5 +33,8 @@ ${BUILD_DIR}/Ball.o: Ball.cpp
 
 ${BUILD_DIR}/rsdl.o: rsdl.cpp
 	${CC} -c rsdl.cpp ${SDL_FLAGS} -o ${BUILD_DIR}/rsdl.o
+
+${BUILD_DIR}/functions.o: functions.cpp
+	${CC} -c functions.cpp ${SDL_FLAGS} -o ${BUILD_DIR}/functions.o
 clean:
 	rm -rf ${BUILD_DIR} && mkdir -p ${BUILD_DIR}
