Project 4: Night Phase

--- a/Project4/Makefile
+++ b/Project4/Makefile
@@ -7,8 +7,8 @@ EXCEPTION_DIR=${SRC_DIR}/Exception
 
 all: mafia.out
 
-mafia.out: ${BUILD_DIR}/main.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/VoteSystem.o ${BUILD_DIR}/Vote.o ${BUILD_DIR}/Candidate.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Bulletproof.o ${BUILD_DIR}/Detective.o ${BUILD_DIR}/Doctor.o ${BUILD_DIR}/Godfather.o ${BUILD_DIR}/Joker.o ${BUILD_DIR}/Mafia.o ${BUILD_DIR}/Silencer.o ${BUILD_DIR}/Villager.o ${BUILD_DIR}/PlayerNotJoinedException.o ${BUILD_DIR}/GameNotCreatedException.o ${BUILD_DIR}/NotAllAssignedException.o ${BUILD_DIR}/GameAlreadyStartedException.o ${BUILD_DIR}/NotAliveVoteeException.o ${BUILD_DIR}/SilencedException.o ${BUILD_DIR}/UserNotAliveException.o ${BUILD_DIR}/UserCannotWakeupException.o 
-	${CC} ${BUILD_DIR}/main.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/VoteSystem.o ${BUILD_DIR}/Vote.o ${BUILD_DIR}/Candidate.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Bulletproof.o ${BUILD_DIR}/Detective.o ${BUILD_DIR}/Doctor.o ${BUILD_DIR}/Godfather.o ${BUILD_DIR}/Joker.o ${BUILD_DIR}/Mafia.o ${BUILD_DIR}/Silencer.o ${BUILD_DIR}/Villager.o ${BUILD_DIR}/PlayerNotJoinedException.o ${BUILD_DIR}/GameNotCreatedException.o ${BUILD_DIR}/NotAllAssignedException.o ${BUILD_DIR}/GameAlreadyStartedException.o ${BUILD_DIR}/NotAliveVoteeException.o ${BUILD_DIR}/SilencedException.o  ${BUILD_DIR}/UserNotAliveException.o ${BUILD_DIR}/UserCannotWakeupException.o -o ${BUILD_DIR}/mafia.out
+mafia.out: ${BUILD_DIR}/main.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/VoteSystem.o ${BUILD_DIR}/Vote.o ${BUILD_DIR}/Candidate.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Bulletproof.o ${BUILD_DIR}/Detective.o ${BUILD_DIR}/Doctor.o ${BUILD_DIR}/Godfather.o ${BUILD_DIR}/Joker.o ${BUILD_DIR}/Mafia.o ${BUILD_DIR}/Silencer.o ${BUILD_DIR}/Villager.o ${BUILD_DIR}/PlayerNotJoinedException.o ${BUILD_DIR}/GameNotCreatedException.o ${BUILD_DIR}/NotAllAssignedException.o ${BUILD_DIR}/GameAlreadyStartedException.o ${BUILD_DIR}/NotAliveVoteeException.o ${BUILD_DIR}/SilencedException.o ${BUILD_DIR}/UserNotAliveException.o ${BUILD_DIR}/UserCannotWakeupException.o  ${BUILD_DIR}/AlreadyAskedException.o ${BUILD_DIR}/SuspectIsDeadException.o ${BUILD_DIR}/PatientIsDeadException.o ${BUILD_DIR}/AlreadyHealedException.o ${BUILD_DIR}/PersonIsDeadException.o
+	${CC} ${BUILD_DIR}/main.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/VoteSystem.o ${BUILD_DIR}/Vote.o ${BUILD_DIR}/Candidate.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Bulletproof.o ${BUILD_DIR}/Detective.o ${BUILD_DIR}/Doctor.o ${BUILD_DIR}/Godfather.o ${BUILD_DIR}/Joker.o ${BUILD_DIR}/Mafia.o ${BUILD_DIR}/Silencer.o ${BUILD_DIR}/Villager.o ${BUILD_DIR}/PlayerNotJoinedException.o ${BUILD_DIR}/GameNotCreatedException.o ${BUILD_DIR}/NotAllAssignedException.o ${BUILD_DIR}/GameAlreadyStartedException.o ${BUILD_DIR}/NotAliveVoteeException.o ${BUILD_DIR}/SilencedException.o  ${BUILD_DIR}/UserNotAliveException.o ${BUILD_DIR}/UserCannotWakeupException.o  ${BUILD_DIR}/AlreadyAskedException.o ${BUILD_DIR}/SuspectIsDeadException.o ${BUILD_DIR}/PatientIsDeadException.o ${BUILD_DIR}/AlreadyHealedException.o ${BUILD_DIR}/PersonIsDeadException.o -o ${BUILD_DIR}/mafia.out
 
 ${BUILD_DIR}/main.o: main.cpp ${SRC_DIR}/CommandHandler.hpp
 	${CC} -c main.cpp -o ${BUILD_DIR}/main.o
@@ -34,22 +34,22 @@ ${BUILD_DIR}/Player.o: ${SRC_DIR}/Player.cpp
 ${BUILD_DIR}/Bulletproof.o: ${SRC_DIR}/Bulletproof.cpp ${SRC_DIR}/Villager.hpp
 	${CC} -c ${SRC_DIR}/Bulletproof.cpp -o ${BUILD_DIR}/Bulletproof.o
 
-${BUILD_DIR}/Detective.o: ${SRC_DIR}/Detective.cpp ${SRC_DIR}/Villager.hpp
+${BUILD_DIR}/Detective.o: ${SRC_DIR}/Detective.cpp ${SRC_DIR}/Villager.hpp ${EXCEPTION_DIR}/AlreadyAskedException.hpp ${EXCEPTION_DIR}/SuspectIsDeadException.hpp
 	${CC} -c ${SRC_DIR}/Detective.cpp -o ${BUILD_DIR}/Detective.o
 
-${BUILD_DIR}/Doctor.o: ${SRC_DIR}/Doctor.cpp ${SRC_DIR}/Villager.hpp
+${BUILD_DIR}/Doctor.o: ${SRC_DIR}/Doctor.cpp ${SRC_DIR}/Villager.hpp ${EXCEPTION_DIR}/PatientIsDeadException.hpp ${EXCEPTION_DIR}/AlreadyHealedException.hpp
 	${CC} -c ${SRC_DIR}/Doctor.cpp -o ${BUILD_DIR}/Doctor.o
 
 ${BUILD_DIR}/Godfather.o: ${SRC_DIR}/Godfather.cpp ${SRC_DIR}/Mafia.hpp
 	${CC} -c ${SRC_DIR}/Godfather.cpp -o ${BUILD_DIR}/Godfather.o
 
-${BUILD_DIR}/Silencer.o: ${SRC_DIR}/Silencer.cpp ${SRC_DIR}/Mafia.hpp
+${BUILD_DIR}/Silencer.o: ${SRC_DIR}/Silencer.cpp ${SRC_DIR}/Mafia.hpp ${EXCEPTION_DIR}/PersonIsDeadException.cpp
 	${CC} -c ${SRC_DIR}/Silencer.cpp -o ${BUILD_DIR}/Silencer.o
 
 ${BUILD_DIR}/Joker.o: ${SRC_DIR}/Joker.cpp ${SRC_DIR}/Player.hpp
 	${CC} -c ${SRC_DIR}/Joker.cpp -o ${BUILD_DIR}/Joker.o
 
-${BUILD_DIR}/Mafia.o: ${SRC_DIR}/Mafia.cpp ${SRC_DIR}/Player.hpp
+${BUILD_DIR}/Mafia.o: ${SRC_DIR}/Mafia.cpp ${SRC_DIR}/Player.hpp ${SRC_DIR}/VoteSystem.hpp
 	${CC} -c ${SRC_DIR}/Mafia.cpp -o ${BUILD_DIR}/Mafia.o
 
 ${BUILD_DIR}/Villager.o: ${SRC_DIR}/Villager.cpp ${SRC_DIR}/Player.hpp
@@ -78,6 +78,21 @@ ${BUILD_DIR}/UserNotAliveException.o: ${EXCEPTION_DIR}/UserNotAliveException.cpp
 
 ${BUILD_DIR}/UserCannotWakeupException.o: ${EXCEPTION_DIR}/UserCannotWakeupException.cpp
 	${CC} -c ${EXCEPTION_DIR}/UserCannotWakeupException.cpp -o ${BUILD_DIR}/UserCannotWakeupException.o
+
+${BUILD_DIR}/AlreadyAskedException.o: ${EXCEPTION_DIR}/AlreadyAskedException.cpp
+	${CC} -c ${EXCEPTION_DIR}/AlreadyAskedException.cpp -o ${BUILD_DIR}/AlreadyAskedException.o
+
+${BUILD_DIR}/SuspectIsDeadException.o: ${EXCEPTION_DIR}/SuspectIsDeadException.cpp
+	${CC} -c ${EXCEPTION_DIR}/SuspectIsDeadException.cpp -o ${BUILD_DIR}/SuspectIsDeadException.o
+
+${BUILD_DIR}/PatientIsDeadException.o: ${EXCEPTION_DIR}/PatientIsDeadException.cpp
+	${CC} -c ${EXCEPTION_DIR}/PatientIsDeadException.cpp -o ${BUILD_DIR}/PatientIsDeadException.o
+
+${BUILD_DIR}/AlreadyHealedException.o: ${EXCEPTION_DIR}/AlreadyHealedException.cpp
+	${CC} -c ${EXCEPTION_DIR}/AlreadyHealedException.cpp -o ${BUILD_DIR}/AlreadyHealedException.o
+
+${BUILD_DIR}/PersonIsDeadException.o: ${EXCEPTION_DIR}/PersonIsDeadException.cpp
+	${CC} -c ${EXCEPTION_DIR}/PersonIsDeadException.cpp -o ${BUILD_DIR}/PersonIsDeadException.o
 
 clean:
 	rm -rf ${BUILD_DIR} && mkdir -p ${BUILD_DIR}
