Project 4: Swap Characters

--- a/Project4/Makefile
+++ b/Project4/Makefile
@@ -7,8 +7,8 @@ EXCEPTION_DIR=${SRC_DIR}/Exception
 
 all: mafia.out
 
-mafia.out: ${BUILD_DIR}/main.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/VoteSystem.o ${BUILD_DIR}/Vote.o ${BUILD_DIR}/Candidate.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Bulletproof.o ${BUILD_DIR}/Detective.o ${BUILD_DIR}/Doctor.o ${BUILD_DIR}/Godfather.o ${BUILD_DIR}/Joker.o ${BUILD_DIR}/Mafia.o ${BUILD_DIR}/Silencer.o ${BUILD_DIR}/Villager.o ${BUILD_DIR}/PlayerNotJoinedException.o ${BUILD_DIR}/GameNotCreatedException.o ${BUILD_DIR}/NotAllAssignedException.o ${BUILD_DIR}/GameAlreadyStartedException.o ${BUILD_DIR}/NotAliveVoteeException.o ${BUILD_DIR}/SilencedException.o ${BUILD_DIR}/UserNotAliveException.o ${BUILD_DIR}/UserCannotWakeupException.o  ${BUILD_DIR}/AlreadyAskedException.o ${BUILD_DIR}/SuspectIsDeadException.o ${BUILD_DIR}/PatientIsDeadException.o ${BUILD_DIR}/AlreadyHealedException.o ${BUILD_DIR}/PersonIsDeadException.o
-	${CC} ${BUILD_DIR}/main.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/VoteSystem.o ${BUILD_DIR}/Vote.o ${BUILD_DIR}/Candidate.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Bulletproof.o ${BUILD_DIR}/Detective.o ${BUILD_DIR}/Doctor.o ${BUILD_DIR}/Godfather.o ${BUILD_DIR}/Joker.o ${BUILD_DIR}/Mafia.o ${BUILD_DIR}/Silencer.o ${BUILD_DIR}/Villager.o ${BUILD_DIR}/PlayerNotJoinedException.o ${BUILD_DIR}/GameNotCreatedException.o ${BUILD_DIR}/NotAllAssignedException.o ${BUILD_DIR}/GameAlreadyStartedException.o ${BUILD_DIR}/NotAliveVoteeException.o ${BUILD_DIR}/SilencedException.o  ${BUILD_DIR}/UserNotAliveException.o ${BUILD_DIR}/UserCannotWakeupException.o  ${BUILD_DIR}/AlreadyAskedException.o ${BUILD_DIR}/SuspectIsDeadException.o ${BUILD_DIR}/PatientIsDeadException.o ${BUILD_DIR}/AlreadyHealedException.o ${BUILD_DIR}/PersonIsDeadException.o -o ${BUILD_DIR}/mafia.out
+mafia.out: ${BUILD_DIR}/main.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/VoteSystem.o ${BUILD_DIR}/Vote.o ${BUILD_DIR}/Candidate.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Bulletproof.o ${BUILD_DIR}/Detective.o ${BUILD_DIR}/Doctor.o ${BUILD_DIR}/Godfather.o ${BUILD_DIR}/Joker.o ${BUILD_DIR}/Mafia.o ${BUILD_DIR}/Silencer.o ${BUILD_DIR}/Villager.o ${BUILD_DIR}/PlayerNotJoinedException.o ${BUILD_DIR}/GameNotCreatedException.o ${BUILD_DIR}/NotAllAssignedException.o ${BUILD_DIR}/GameAlreadyStartedException.o ${BUILD_DIR}/NotAliveVoteeException.o ${BUILD_DIR}/SilencedException.o ${BUILD_DIR}/UserNotAliveException.o ${BUILD_DIR}/UserCannotWakeupException.o  ${BUILD_DIR}/AlreadyAskedException.o ${BUILD_DIR}/SuspectIsDeadException.o ${BUILD_DIR}/PatientIsDeadException.o ${BUILD_DIR}/AlreadyHealedException.o ${BUILD_DIR}/PersonIsDeadException.o ${BUILD_DIR}/VotingInProgressException.o ${BUILD_DIR}/CannotSwapException.o ${BUILD_DIR}/CharactersAlreadySwappedException.o
+	${CC} ${BUILD_DIR}/main.o ${BUILD_DIR}/Game.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/VoteSystem.o ${BUILD_DIR}/Vote.o ${BUILD_DIR}/Candidate.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Player.o ${BUILD_DIR}/Bulletproof.o ${BUILD_DIR}/Detective.o ${BUILD_DIR}/Doctor.o ${BUILD_DIR}/Godfather.o ${BUILD_DIR}/Joker.o ${BUILD_DIR}/Mafia.o ${BUILD_DIR}/Silencer.o ${BUILD_DIR}/Villager.o ${BUILD_DIR}/PlayerNotJoinedException.o ${BUILD_DIR}/GameNotCreatedException.o ${BUILD_DIR}/NotAllAssignedException.o ${BUILD_DIR}/GameAlreadyStartedException.o ${BUILD_DIR}/NotAliveVoteeException.o ${BUILD_DIR}/SilencedException.o  ${BUILD_DIR}/UserNotAliveException.o ${BUILD_DIR}/UserCannotWakeupException.o  ${BUILD_DIR}/AlreadyAskedException.o ${BUILD_DIR}/SuspectIsDeadException.o ${BUILD_DIR}/PatientIsDeadException.o ${BUILD_DIR}/AlreadyHealedException.o ${BUILD_DIR}/PersonIsDeadException.o ${BUILD_DIR}/VotingInProgressException.o ${BUILD_DIR}/CannotSwapException.o ${BUILD_DIR}/CharactersAlreadySwappedException.o -o ${BUILD_DIR}/mafia.out
 
 ${BUILD_DIR}/main.o: main.cpp ${SRC_DIR}/CommandHandler.hpp
 	${CC} -c main.cpp -o ${BUILD_DIR}/main.o
@@ -16,7 +16,7 @@ ${BUILD_DIR}/main.o: main.cpp ${SRC_DIR}/CommandHandler.hpp
 ${BUILD_DIR}/CommandHandler.o: ${SRC_DIR}/CommandHandler.cpp ${SRC_DIR}/Game.hpp ${EXCEPTION_DIR}/GameNotCreatedException.hpp
 	${CC} -c ${SRC_DIR}/CommandHandler.cpp -o ${BUILD_DIR}/CommandHandler.o
 
-${BUILD_DIR}/Game.o: ${SRC_DIR}/Game.cpp ${SRC_DIR}/Player.hpp ${SRC_DIR}/VoteSystem.hpp ${SRC_DIR}/Silencer.hpp ${SRC_DIR}/Bulletproof.hpp ${SRC_DIR}/Detective.hpp ${SRC_DIR}/Doctor.hpp ${SRC_DIR}/Godfather.hpp ${SRC_DIR}/Joker.hpp ${SRC_DIR}/Mafia.hpp ${SRC_DIR}/Villager.hpp ${EXCEPTION_DIR}/PlayerNotJoinedException.hpp ${EXCEPTION_DIR}/NotAllAssignedException.hpp ${EXCEPTION_DIR}/GameAlreadyStartedException.hpp ${EXCEPTION_DIR}/NotAliveVoteeException.hpp ${EXCEPTION_DIR}/SilencedException.hpp ${EXCEPTION_DIR}/UserNotAliveException.hpp ${EXCEPTION_DIR}/UserCannotWakeupException.hpp
+${BUILD_DIR}/Game.o: ${SRC_DIR}/Game.cpp ${SRC_DIR}/Player.hpp ${SRC_DIR}/VoteSystem.hpp ${SRC_DIR}/Silencer.hpp ${SRC_DIR}/Bulletproof.hpp ${SRC_DIR}/Detective.hpp ${SRC_DIR}/Doctor.hpp ${SRC_DIR}/Godfather.hpp ${SRC_DIR}/Joker.hpp ${SRC_DIR}/Mafia.hpp ${SRC_DIR}/Villager.hpp ${EXCEPTION_DIR}/PlayerNotJoinedException.hpp ${EXCEPTION_DIR}/NotAllAssignedException.hpp ${EXCEPTION_DIR}/GameAlreadyStartedException.hpp ${EXCEPTION_DIR}/NotAliveVoteeException.hpp ${EXCEPTION_DIR}/SilencedException.hpp ${EXCEPTION_DIR}/UserNotAliveException.hpp ${EXCEPTION_DIR}/UserCannotWakeupException.hpp ${EXCEPTION_DIR}/UserNotAliveException.hpp ${EXCEPTION_DIR}/VotingInProgressException.hpp ${EXCEPTION_DIR}/CannotSwapException.hpp ${EXCEPTION_DIR}/CharactersAlreadySwappedException.hpp
 	${CC} -c ${SRC_DIR}/Game.cpp -o ${BUILD_DIR}/Game.o
 
 ${BUILD_DIR}/VoteSystem.o: ${SRC_DIR}/VoteSystem.cpp ${SRC_DIR}/Vote.hpp ${SRC_DIR}/Player.hpp ${SRC_DIR}/Candidate.hpp
@@ -93,6 +93,15 @@ ${BUILD_DIR}/AlreadyHealedException.o: ${EXCEPTION_DIR}/AlreadyHealedException.c
 
 ${BUILD_DIR}/PersonIsDeadException.o: ${EXCEPTION_DIR}/PersonIsDeadException.cpp
 	${CC} -c ${EXCEPTION_DIR}/PersonIsDeadException.cpp -o ${BUILD_DIR}/PersonIsDeadException.o
+
+${BUILD_DIR}/VotingInProgressException.o: ${EXCEPTION_DIR}/VotingInProgressException.cpp
+	${CC} -c ${EXCEPTION_DIR}/VotingInProgressException.cpp -o ${BUILD_DIR}/VotingInProgressException.o
+
+${BUILD_DIR}/CannotSwapException.o: ${EXCEPTION_DIR}/CannotSwapException.cpp
+	${CC} -c ${EXCEPTION_DIR}/CannotSwapException.cpp -o ${BUILD_DIR}/CannotSwapException.o
+
+${BUILD_DIR}/CharactersAlreadySwappedException.o: ${EXCEPTION_DIR}/CharactersAlreadySwappedException.cpp
+	${CC} -c ${EXCEPTION_DIR}/CharactersAlreadySwappedException.cpp -o ${BUILD_DIR}/CharactersAlreadySwappedException.o
 
 clean:
 	rm -rf ${BUILD_DIR} && mkdir -p ${BUILD_DIR}
