--- a/Final-Project-Phase1/testcase/public_test.in
+++ b/Final-Project-Phase1/testcase/public_test.in
@@ -1,5 +1,7 @@
 GET songs
 POST signup ? email test@gmail.com username test password test
+POST logout
+POST signup ? email test2@gmail.com username test2 password test2
 GET songs ? id 1
 GET songs ? id 123
 POST likes ? id 2
