Playlist page is done

--- a/Utunes-Final-Project-Phase3/Makefile
+++ b/Utunes-Final-Project-Phase3/Makefile
@@ -8,8 +8,8 @@ WEB_DIR=${SRC_DIR}/web
 
 all: utunes.out
 
-utunes.out: ${BUILD_DIR}/main.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/Utunes.o ${BUILD_DIR}/RecommendationSystem.o ${BUILD_DIR}/AuthenticationSystem.o ${BUILD_DIR}/Session.o ${BUILD_DIR}/User.o ${BUILD_DIR}/XOREncryption.o ${BUILD_DIR}/Song.o ${BUILD_DIR}/Criteria.o ${BUILD_DIR}/PublishYearCriteria.o ${BUILD_DIR}/ArtistCriteria.o ${BUILD_DIR}/LikesCriteria.o ${BUILD_DIR}/AndCriteria.o ${BUILD_DIR}/LikeSystem.o ${BUILD_DIR}/CommentSystem.o ${BUILD_DIR}/PlaylistSystem.o ${BUILD_DIR}/Playlist.o ${BUILD_DIR}/Like.o ${BUILD_DIR}/Comment.o ${BUILD_DIR}/BadRequestException.o ${BUILD_DIR}/PermissionDeniedException.o ${BUILD_DIR}/NotFoundException.o ${BUILD_DIR}/EmptyException.o $(BUILD_DIR)/template_parser.o $(BUILD_DIR)/response.o $(BUILD_DIR)/request.o $(BUILD_DIR)/utilities.o $(BUILD_DIR)/server.o $(BUILD_DIR)/route.o ${BUILD_DIR}/RouteHandler.o ${BUILD_DIR}/UtunesServer.o ${BUILD_DIR}/HomeController.o ${BUILD_DIR}/SignupController.o ${BUILD_DIR}/SignupHandler.o ${BUILD_DIR}/LogoutHandler.o ${BUILD_DIR}/LoginController.o ${BUILD_DIR}/LoginHandler.o ${BUILD_DIR}/SongController.o ${BUILD_DIR}/LikeHandler.o ${BUILD_DIR}/LikedSongController.o 
-	${CC}	${BUILD_DIR}/main.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/Utunes.o ${BUILD_DIR}/RecommendationSystem.o ${BUILD_DIR}/AuthenticationSystem.o ${BUILD_DIR}/Session.o ${BUILD_DIR}/User.o ${BUILD_DIR}/XOREncryption.o ${BUILD_DIR}/Song.o ${BUILD_DIR}/Criteria.o ${BUILD_DIR}/PublishYearCriteria.o ${BUILD_DIR}/ArtistCriteria.o ${BUILD_DIR}/LikesCriteria.o ${BUILD_DIR}/AndCriteria.o ${BUILD_DIR}/LikeSystem.o ${BUILD_DIR}/CommentSystem.o ${BUILD_DIR}/PlaylistSystem.o ${BUILD_DIR}/Playlist.o ${BUILD_DIR}/Like.o ${BUILD_DIR}/Comment.o ${BUILD_DIR}/BadRequestException.o ${BUILD_DIR}/PermissionDeniedException.o ${BUILD_DIR}/NotFoundException.o ${BUILD_DIR}/EmptyException.o $(BUILD_DIR)/template_parser.o $(BUILD_DIR)/response.o $(BUILD_DIR)/request.o $(BUILD_DIR)/utilities.o $(BUILD_DIR)/server.o $(BUILD_DIR)/route.o ${BUILD_DIR}/RouteHandler.o ${BUILD_DIR}/UtunesServer.o ${BUILD_DIR}/HomeController.o ${BUILD_DIR}/SignupController.o ${BUILD_DIR}/SignupHandler.o ${BUILD_DIR}/LogoutHandler.o ${BUILD_DIR}/LoginController.o ${BUILD_DIR}/LoginHandler.o ${BUILD_DIR}/SongController.o ${BUILD_DIR}/LikeHandler.o ${BUILD_DIR}/LikedSongController.o -o utunes.out
+utunes.out: ${BUILD_DIR}/main.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/Utunes.o ${BUILD_DIR}/RecommendationSystem.o ${BUILD_DIR}/AuthenticationSystem.o ${BUILD_DIR}/Session.o ${BUILD_DIR}/User.o ${BUILD_DIR}/XOREncryption.o ${BUILD_DIR}/Song.o ${BUILD_DIR}/Criteria.o ${BUILD_DIR}/PublishYearCriteria.o ${BUILD_DIR}/ArtistCriteria.o ${BUILD_DIR}/LikesCriteria.o ${BUILD_DIR}/AndCriteria.o ${BUILD_DIR}/LikeSystem.o ${BUILD_DIR}/CommentSystem.o ${BUILD_DIR}/PlaylistSystem.o ${BUILD_DIR}/Playlist.o ${BUILD_DIR}/Like.o ${BUILD_DIR}/Comment.o ${BUILD_DIR}/BadRequestException.o ${BUILD_DIR}/PermissionDeniedException.o ${BUILD_DIR}/NotFoundException.o ${BUILD_DIR}/EmptyException.o $(BUILD_DIR)/template_parser.o $(BUILD_DIR)/response.o $(BUILD_DIR)/request.o $(BUILD_DIR)/utilities.o $(BUILD_DIR)/server.o $(BUILD_DIR)/route.o ${BUILD_DIR}/RouteHandler.o ${BUILD_DIR}/UtunesServer.o ${BUILD_DIR}/HomeController.o ${BUILD_DIR}/SignupController.o ${BUILD_DIR}/SignupHandler.o ${BUILD_DIR}/LogoutHandler.o ${BUILD_DIR}/LoginController.o ${BUILD_DIR}/LoginHandler.o ${BUILD_DIR}/SongController.o ${BUILD_DIR}/LikeHandler.o ${BUILD_DIR}/LikedSongController.o ${BUILD_DIR}/PlaylistsController.o ${BUILD_DIR}/NewPlaylistHandler.o ${BUILD_DIR}/PlaylistController.o ${BUILD_DIR}/AddSongHandler.o ${BUILD_DIR}/RemoveSongHandler.o 
+	${CC}	${BUILD_DIR}/main.o ${BUILD_DIR}/CommandHandler.o ${BUILD_DIR}/Utunes.o ${BUILD_DIR}/RecommendationSystem.o ${BUILD_DIR}/AuthenticationSystem.o ${BUILD_DIR}/Session.o ${BUILD_DIR}/User.o ${BUILD_DIR}/XOREncryption.o ${BUILD_DIR}/Song.o ${BUILD_DIR}/Criteria.o ${BUILD_DIR}/PublishYearCriteria.o ${BUILD_DIR}/ArtistCriteria.o ${BUILD_DIR}/LikesCriteria.o ${BUILD_DIR}/AndCriteria.o ${BUILD_DIR}/LikeSystem.o ${BUILD_DIR}/CommentSystem.o ${BUILD_DIR}/PlaylistSystem.o ${BUILD_DIR}/Playlist.o ${BUILD_DIR}/Like.o ${BUILD_DIR}/Comment.o ${BUILD_DIR}/BadRequestException.o ${BUILD_DIR}/PermissionDeniedException.o ${BUILD_DIR}/NotFoundException.o ${BUILD_DIR}/EmptyException.o $(BUILD_DIR)/template_parser.o $(BUILD_DIR)/response.o $(BUILD_DIR)/request.o $(BUILD_DIR)/utilities.o $(BUILD_DIR)/server.o $(BUILD_DIR)/route.o ${BUILD_DIR}/RouteHandler.o ${BUILD_DIR}/UtunesServer.o ${BUILD_DIR}/HomeController.o ${BUILD_DIR}/SignupController.o ${BUILD_DIR}/SignupHandler.o ${BUILD_DIR}/LogoutHandler.o ${BUILD_DIR}/LoginController.o ${BUILD_DIR}/LoginHandler.o ${BUILD_DIR}/SongController.o ${BUILD_DIR}/LikeHandler.o ${BUILD_DIR}/LikedSongController.o ${BUILD_DIR}/PlaylistsController.o ${BUILD_DIR}/NewPlaylistHandler.o ${BUILD_DIR}/PlaylistController.o ${BUILD_DIR}/AddSongHandler.o ${BUILD_DIR}/RemoveSongHandler.o -o utunes.out
 
 ${BUILD_DIR}/main.o: main.cpp ${SRC_DIR}/CommandHandler.hpp ${SRC_DIR}/Utunes.hpp ${WEB_DIR}/RouteHandler.hpp
 	${CC} -c main.cpp -o ${BUILD_DIR}/main.o
@@ -106,7 +106,7 @@ $(BUILD_DIR)/server.o: server/server.cpp server/server.hpp server/route.hpp util
 $(BUILD_DIR)/route.o: server/route.cpp server/route.hpp utils/utilities.hpp utils/response.hpp utils/request.hpp utils/include.hpp
 	$(CC) $(CF) -c server/route.cpp -o $(BUILD_DIR)/route.o
 
-${BUILD_DIR}/RouteHandler.o: ${WEB_DIR}/RouteHandler.cpp ${WEB_DIR}/UtunesServer.hpp ${WEB_DIR}/controllers/HomeController.hpp ${WEB_DIR}/controllers/SignupController.hpp ${WEB_DIR}/controllers/SignupHandler.hpp ${WEB_DIR}/controllers/LogoutHandler.hpp ${WEB_DIR}/controllers/LoginController.cpp  ${WEB_DIR}/controllers/LoginHandler.hpp ${WEB_DIR}/controllers/LikeHandler.hpp ${WEB_DIR}/controllers/LikedSongController.cpp
+${BUILD_DIR}/RouteHandler.o: ${WEB_DIR}/RouteHandler.cpp ${WEB_DIR}/UtunesServer.hpp ${WEB_DIR}/controllers/HomeController.hpp ${WEB_DIR}/controllers/SignupController.hpp ${WEB_DIR}/controllers/SignupHandler.hpp ${WEB_DIR}/controllers/LogoutHandler.hpp ${WEB_DIR}/controllers/LoginController.cpp  ${WEB_DIR}/controllers/LoginHandler.hpp ${WEB_DIR}/controllers/LikeHandler.hpp ${WEB_DIR}/controllers/LikedSongController.cpp ${WEB_DIR}/controllers/PlaylistsController.hpp  ${WEB_DIR}/controllers/NewPlaylistHandler.hpp ${WEB_DIR}/controllers/AddSongHandler.hpp ${WEB_DIR}/controllers/RemoveSongHandler.hpp
 	${CC} -c ${WEB_DIR}/RouteHandler.cpp -o ${BUILD_DIR}/RouteHandler.o
 
 ${BUILD_DIR}/UtunesServer.o: ${WEB_DIR}/UtunesServer.cpp server/server.hpp
@@ -140,6 +140,21 @@ ${BUILD_DIR}/LikeHandler.o: ${WEB_DIR}/controllers/LikeHandler.cpp server/server
 
 ${BUILD_DIR}/LikedSongController.o: ${WEB_DIR}/controllers/LikedSongController.cpp server/server.hpp ${SRC_DIR}/Utunes.hpp ${SRC_DIR}/Song.hpp
 	${CC} -c ${WEB_DIR}/controllers/LikedSongController.cpp -o ${BUILD_DIR}/LikedSongController.o
+
+${BUILD_DIR}/PlaylistsController.o: ${WEB_DIR}/controllers/PlaylistsController.cpp server/server.hpp ${SRC_DIR}/Utunes.hpp ${SRC_DIR}/Song.hpp
+	${CC} -c ${WEB_DIR}/controllers/PlaylistsController.cpp -o ${BUILD_DIR}/PlaylistsController.o
+
+${BUILD_DIR}/NewPlaylistHandler.o: ${WEB_DIR}/controllers/NewPlaylistHandler.cpp server/server.hpp ${SRC_DIR}/Utunes.hpp ${SRC_DIR}/Song.hpp
+	${CC} -c ${WEB_DIR}/controllers/NewPlaylistHandler.cpp -o ${BUILD_DIR}/NewPlaylistHandler.o
+
+${BUILD_DIR}/PlaylistController.o: ${WEB_DIR}/controllers/PlaylistController.cpp server/server.hpp ${SRC_DIR}/Utunes.hpp ${SRC_DIR}/Song.hpp
+	${CC} -c ${WEB_DIR}/controllers/PlaylistController.cpp -o ${BUILD_DIR}/PlaylistController.o
+
+${BUILD_DIR}/AddSongHandler.o: ${WEB_DIR}/controllers/AddSongHandler.cpp server/server.hpp ${SRC_DIR}/Utunes.hpp ${SRC_DIR}/Song.hpp
+	${CC} -c ${WEB_DIR}/controllers/AddSongHandler.cpp -o ${BUILD_DIR}/AddSongHandler.o
+
+${BUILD_DIR}/RemoveSongHandler.o: ${WEB_DIR}/controllers/RemoveSongHandler.cpp server/server.hpp ${SRC_DIR}/Utunes.hpp ${SRC_DIR}/Song.hpp
+	${CC} -c ${WEB_DIR}/controllers/RemoveSongHandler.cpp -o ${BUILD_DIR}/RemoveSongHandler.o
 
 clean:
 	rm -rf ${BUILD_DIR} && mkdir -p ${BUILD_DIR}
